--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <div class="album-container" id="album">
     
       <div class="page" style="z-index: 12;" id="page0">
-        <img src="/assets/foto1momo.jpg" alt="Casal sorridente caminhando de mãos dadas em um parque florido durante o dia transmitindo felicidade e carinho ambiente alegre e romântico">
+        <img src="assets/foto1momo.jpg" alt="Casal sorridente caminhando de mãos dadas em um parque florido durante o dia transmitindo felicidade e carinho ambiente alegre e romântico">
         <p>A vida é melhor com voce 💑</p>
       </div>
       <div class="page" style="z-index: 11; display: none;" id="page1">
